<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.Login"
    android:background="@drawable/gradiant_background">


    <RelativeLayout
        android:id="@+id/relfl"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="20sp"
    android:layout_centerHorizontal="true"
    >
    <ImageView
        android:src="@drawable/banana"
        android:layout_width="match_parent"
        android:layout_height="300sp"
        />


</RelativeLayout>
    <RelativeLayout
        android:id="@+id/first"
        android:layout_below="@+id/relfl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="20sp">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10sp"
            android:inputType="textEmailAddress"
            android:hint="Email"
            android:textColorHint="#000"
            android:id="@+id/textemail"
            android:textColor="#000"
            style="@style/Edittextview"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10sp"
            android:inputType="textPassword"
            android:hint="Password"
            android:textColorHint="#000"
            android:id="@+id/textpassword"
            style="@style/Edittextview"

            />
        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20sp"
            android:padding="12sp"
            android:text="Login"
            android:textColor="#000"
           android:id="@+id/buttonlogin"
            style="@style/MyCustomButton"/>
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30sp"
            android:layout_marginRight="30sp"
            android:text="No account yet? Create one"
            android:gravity="center"
            android:textSize="16sp"
            android:textColor="#000"
            />
    </LinearLayout>
    </RelativeLayout>

</RelativeLayout>