<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.Register"
    android:background="@drawable/gradiant_background"
    android:id="@+id/scrolls"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Register"
            android:textSize="22dp"
            android:gravity="center"
            android:layout_margin="10dp" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:textColorHint="#000"
            android:hint="Full Name"
            android:id="@+id/fullname"
         />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="10dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="Gender" />
        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/gender"
            android:textColor="#000"
            android:layout_margin="10dp"
            android:background="@null"
            >
            <RadioButton
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="Male"
                android:textColor="#000"
                android:id="@+id/rbmale"/>
            <RadioButton
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="Female"
                android:textColor="#000"
                android:id="@+id/rbfemale"/>

        </RadioGroup>
        </LinearLayout>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="Phone"
            android:textColorHint="#000"
            android:inputType="number"
            android:id="@+id/phone"
          />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="Email"
            android:textColorHint="#000"
            android:inputType="textEmailAddress"
            android:id="@+id/email"
          />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="Address"
            android:textColorHint="#000"
            android:id="@+id/address"
     />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="Username"
            android:textColorHint="#000"
            android:id="@+id/username"
     />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="Password"
            android:textColorHint="#000"
            android:inputType="textPassword"
            android:id="@+id/password"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="User Type"/>
        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/usertype"
            android:textColor="#000"
            android:layout_margin="10dp"
            >
            <RadioButton
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="Mechanic"
                android:textColor="#000"
                android:id="@+id/rdomechanic"/>
            <RadioButton
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="User"
                android:textColor="#000"
                android:id="@+id/rdouser"/>
        </RadioGroup>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="240dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            app:srcCompat="@drawable/ic_launcher_foreground"
            android:id="@+id/proimage_reg"/>
        <Button
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:id="@+id/btnlocation"
            android:text="GET LOcation"
            ></Button>
        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20sp"
            android:padding="12sp"
            android:text="Register"
            android:textColor="#000"
            android:id="@+id/btnregister"
            style="@style/MyCustomButton"/>
           <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30sp"
            android:layout_marginRight="30sp"
            android:text="Already have an Account."
            android:gravity="center"
            android:textSize="16sp"
            android:textColor="#000"
            android:id="@+id/alhaveaccnt"
            />
    </LinearLayout>



</ScrollView>